# Compilers-2024

./: .gitignore  ASTTree.cpp  ASTTree.h  CMakeLists.txt  Driver.cpp  Driver.h  Grammar.g4  Grammar.interp  Grammar.tokens  GrammarBaseListener.h  GrammarBaseVisitor.h  GrammarLexer.cpp  GrammarLexer.h  GrammarLexer.interp  GrammarLexer.tokens  GrammarListener.h  GrammarParser.cpp  GrammarParser.h  GrammarVisitor.h  Interpreter.cpp  Interpreter.h  MakeASTTree.cpp  README.md  ScopeTree.cpp  ScopeTree.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  main.cpp
.antlr/: Grammar.interp  GrammarBaseListener.java  GrammarLexer.interp  GrammarLexer.java  GrammarLexer.tokens  GrammarListener.java  GrammarParser.java
.github/workflows/: Tests.yaml
ANTLR-generated/: Grammar.interp  GrammarBaseListener.cpp  GrammarBaseListener.h  GrammarBaseVisitor.cpp  GrammarBaseVisitor.h  GrammarLexer.cpp  GrammarLexer.h  GrammarLexer.interp  GrammarLexer.tokens  GrammarListener.cpp  GrammarListener.h  GrammarParser.cpp  GrammarParser.h  GrammarVisitor.cpp  GrammarVisitor.h
AST/: ASTTree.cpp  ASTTree.h  MakeASTTree.cpp
IR/: ASTSimplifier.cpp  ASTSimplifier.h  AST_to_llvm.cpp  llvm_headers.h
Tests/: InterpreterTests.cpp  InterpreterTests.h
TypeChecker/: ScopeTreeBuilder.cpp  ScopeTreeBuilder.h  TypeChecker.cpp  TypeChecker.h
